--- a/biome.json
+++ b/biome.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
   "files": {
-    "ignore": ["en-basic.js"]
+    "ignore": ["en-basic.js", "coverage/**"]
   },
   "formatter": {
     "enabled": true,
