--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "enbasic-js",
+  "name": "ogdens-word-list",
   "version": "0.1.0",
   "description": "Validate text against Ogden's Basic English word list.",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/LucianBuzzo/enbasic-js.git"
+    "url": "git+https://github.com/LucianBuzzo/ogdens-word-list.git"
   },
-  "homepage": "https://github.com/LucianBuzzo/enbasic-js#readme",
+  "homepage": "https://github.com/LucianBuzzo/ogdens-word-list#readme",
   "bugs": {
-    "url": "https://github.com/LucianBuzzo/enbasic-js/issues"
+    "url": "https://github.com/LucianBuzzo/ogdens-word-list/issues"
   },
   "main": "index.js",
   "types": "index.d.ts",
